2008-05-17  Ulrich Drepper  <drepper@redhat.com>

	* nscd/mem.c (gc): Correctly determine highest used array element
	in mark.

	* nscd/mem.c (markrange): Add assert to check entries are all
	aligned.  Small cleanup in bitmap use.

	* nscd/nscd.h (mem_in_flight): Replace blockaddr field with
	blockoff of type nscd_ssize_t.
	* nscd/mem.c (gc): Simplify markrange call for on-flight blocks.
	(mempoll_alloc): Record block offset and not address.

	* nscd/mem.c (gc): Fix test for stack overuse.

	* nscd/aicache.c (addhstaiX): Fix a few small problems, cleanups,
	more asserts.

	* sysdeps/posix/getaddrinfo.c (gaih_inet): If nscd reports no
	entry is available, believe it.

	* resolv/nss_dns/dns-host.c (gaih_getanswer_slice): If there are
	no answers return NSS_STATUS_NOTFOUND.
	(gaih_getanswer): Don't call gaih_getanswer_slice if the answer
	buffer does not have any content.

2008-05-16  Ulrich Drepper  <drepper@redhat.com>

	* string/strcasestr.c (CMP_FUNC): Use __strncasecmp, not strncasecmp.

	* sysdeps/posix/getaddrinfo.c (gaih_inet): After gethostbyname4_r
	lookup, don't assign canon unconditionally.

2008-05-14  Ulrich Drepper  <drepper@redhat.com>

	* string/Makefile (distribute): Add str-two-way.h.

2008-03-29  Eric Blake	<ebb9@byu.net>

	Rewrite string searches to O(n) rather than O(n^2).
	* string/str-two-way.h: New file.  For linear fixed-allocation
	string searching.
	* string/memmem.c: New implementation.
	* string/strstr.c: New implementation.
	* string/strcasestr.c: New implementation.

2008-04-11  Paolo Bonzini  <bonzini@gnu.org>

	* posix/regcomp.c (optimize_utf8): Add a note on why we test
	opr.ctx_type.
	(calc_first): Initialize constraint field.
	(duplicate_node_closure): Use it instead of special casing ANCHORS.
	Use search_duplicated_node to avoid loops.  Fix grammar.
	(duplicate_node): Merge constraint field for all node types.
	(calc_eclosure_iter): Look at constraint field for all node types.